# openghg-project-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
{{cookiecutter.repo_name}}/notebooks/: 00_experiment_template.ipynb
{{cookiecutter.repo_name}}/scripts/: populate_data.py
{{cookiecutter.repo_name}}/src/{{ cookiecutter.package_name }}/: __init__.py
