[project]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = "{{ cookiecutter.python_requires }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
dependencies = [
  "numpy>=2.0",
  "pandas<3.0",
  "xarray>=2025.6.0",
  "matplotlib",
  "scipy",
  "dask[distributed]",
  "distributed",
  "dask-jobqueue",
  "openghg",
  "openghg_inversions @ git+https://github.com/openghg/openghg_inversions.git",
]

[project.optional-dependencies]
jupyter = [
  "jupyterlab",
  "ipykernel",
  "jupyter-server-proxy",
  "dask-labextension",
]
dev = [
  "pytest",
  "ruff",
]
notebook = [
  "jupytext",
  "nbdime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
